parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID program_params SEMI block DOT
Rule 2     program_params -> LPAREN ID_LIST RPAREN
Rule 3     program_params -> empty
Rule 4     block -> declarations BEGIN statement_list END
Rule 5     declarations -> declarations declaration
Rule 6     declarations -> empty
Rule 7     declaration -> const_declaration
Rule 8     declaration -> type_declaration
Rule 9     declaration -> label_declaration
Rule 10    declaration -> var_declaration
Rule 11    declaration -> function_declaration
Rule 12    declaration -> procedure_declaration
Rule 13    const_declaration -> CONST const_list
Rule 14    const_list -> const_list CONST_ITEM SEMI
Rule 15    const_list -> CONST_ITEM SEMI
Rule 16    CONST_ITEM -> ID EQ expression
Rule 17    type_declaration -> TYPE type_list
Rule 18    type_list -> type_list type_item SEMI
Rule 19    type_list -> type_item SEMI
Rule 20    type_item -> ID EQ type
Rule 21    label_declaration -> LABEL label_list SEMI
Rule 22    label_list -> label_list COMMA INTEGER
Rule 23    label_list -> INTEGER
Rule 24    var_declaration -> VAR var_list
Rule 25    var_list -> var_list var_item
Rule 26    var_list -> var_item
Rule 27    var_item -> ID_LIST COLON type SEMI
Rule 28    function_declaration -> FUNCTION ID LPAREN params RPAREN COLON type SEMI block SEMI
Rule 29    procedure_declaration -> PROCEDURE ID LPAREN params RPAREN SEMI block SEMI
Rule 30    type -> packed_type
Rule 31    type -> short_string
Rule 32    type -> simple_type
Rule 33    type -> array_type
Rule 34    type -> enum_type
Rule 35    type -> subrange_type
Rule 36    type -> record_type
Rule 37    type -> set_type
Rule 38    type -> file_type
Rule 39    packed_type -> PACKED type
Rule 40    short_string -> TIPO LBRACKET constant RBRACKET
Rule 41    simple_type -> TIPO
Rule 42    simple_type -> ID
Rule 43    array_type -> ARRAY OF type
Rule 44    array_type -> ARRAY LBRACKET range_list RBRACKET OF type
Rule 45    enum_type -> LPAREN ID_LIST RPAREN
Rule 46    subrange_type -> constant RANGE constant
Rule 47    record_type -> RECORD field_list variant_part END
Rule 48    record_type -> RECORD field_list END
Rule 49    set_type -> SET OF type
Rule 50    file_type -> FILE OF type
Rule 51    range_list -> range_list COMMA range
Rule 52    range_list -> range
Rule 53    range -> const_expr RANGE const_expr
Rule 54    const_expr -> INTEGER
Rule 55    const_expr -> REAL
Rule 56    const_expr -> BOOLEAN
Rule 57    const_expr -> STRING
Rule 58    const_expr -> ID
Rule 59    const_expr -> NIL
Rule 60    field_list -> field_list var_item
Rule 61    field_list -> var_item
Rule 62    variant_part -> CASE ID COLON TIPO OF variant_list
Rule 63    variant_list -> variant_list variant_item SEMI
Rule 64    variant_list -> variant_item SEMI
Rule 65    variant_item -> constant COLON LPAREN field_list RPAREN
Rule 66    ID_LIST -> ID
Rule 67    ID_LIST -> ID_LIST COMMA ID
Rule 68    params -> param_list
Rule 69    params -> empty
Rule 70    param_list -> param_list SEMI param
Rule 71    param_list -> param
Rule 72    param -> ID_LIST COLON type
Rule 73    param -> VAR ID_LIST COLON type
Rule 74    param -> CONST ID_LIST COLON type
Rule 75    statement_list -> statement_list SEMI statement
Rule 76    statement_list -> statement
Rule 77    compound -> BEGIN statement_list END
Rule 78    statement -> assignment
Rule 79    statement -> procedure_call
Rule 80    statement -> if_statement
Rule 81    statement -> for_statement
Rule 82    statement -> while_statement
Rule 83    statement -> repeat_statement
Rule 84    statement -> case_statement
Rule 85    statement -> with_statement
Rule 86    statement -> goto_statement
Rule 87    statement -> labeled_statement
Rule 88    statement -> compound
Rule 89    statement -> empty
Rule 90    assignment -> variable ASSIGN expression
Rule 91    variable -> ID LBRACKET expression RBRACKET
Rule 92    variable -> ID
Rule 93    variable -> variable DOT ID
Rule 94    procedure_call -> ID LPAREN expression_list RPAREN
Rule 95    procedure_call -> ID
Rule 96    if_statement -> IF expression THEN statement ELSE statement
Rule 97    if_statement -> IF expression THEN statement
Rule 98    for_statement -> FOR ID ASSIGN expression TO expression DO statement
Rule 99    for_statement -> FOR ID ASSIGN expression DOWNTO expression DO statement
Rule 100   while_statement -> WHILE expression DO statement
Rule 101   repeat_statement -> REPEAT statement_list UNTIL expression
Rule 102   case_statement -> CASE expression OF case_list END
Rule 103   case_list -> case_list case_item SEMI
Rule 104   case_list -> case_item SEMI
Rule 105   case_item -> constant_list COLON statement_list
Rule 106   constant_list -> constant
Rule 107   constant_list -> constant_list COMMA constant
Rule 108   with_statement -> WITH variable_list DO statement
Rule 109   variable_list -> variable
Rule 110   variable_list -> variable_list COMMA variable
Rule 111   goto_statement -> GOTO INTEGER
Rule 112   labeled_statement -> INTEGER COLON statement
Rule 113   constant -> INTEGER
Rule 114   constant -> REAL
Rule 115   constant -> BOOLEAN
Rule 116   constant -> STRING
Rule 117   constant -> NIL
Rule 118   expression -> variable
Rule 119   expression -> constant
Rule 120   expression -> ID LPAREN expression_list RPAREN
Rule 121   expression -> LPAREN expression RPAREN
Rule 122   expression -> LBRACKET expression_list RBRACKET
Rule 123   expression -> NOT expression
Rule 124   expression -> expression COLON expression
Rule 125   expression -> expression PLUS expression
Rule 126   expression -> expression MINUS expression
Rule 127   expression -> expression TIMES expression
Rule 128   expression -> expression DIVIDE expression
Rule 129   expression -> expression DIV expression
Rule 130   expression -> expression MOD expression
Rule 131   expression -> expression EQ expression
Rule 132   expression -> expression NE expression
Rule 133   expression -> expression LT expression
Rule 134   expression -> expression LE expression
Rule 135   expression -> expression GT expression
Rule 136   expression -> expression GE expression
Rule 137   expression -> expression IN expression
Rule 138   expression -> expression AND expression
Rule 139   expression -> expression OR expression
Rule 140   expression_list -> expression
Rule 141   expression_list -> expression_list COMMA expression
Rule 142   empty -> <empty>

Terminals, with rules where they appear

AND                  : 138
ARRAY                : 43 44
ASSIGN               : 90 98 99
BEGIN                : 4 77
BOOLEAN              : 56 115
CASE                 : 62 102
COLON                : 27 28 62 65 72 73 74 105 112 124
COMMA                : 22 51 67 107 110 141
CONST                : 13 74
DIV                  : 129
DIVIDE               : 128
DO                   : 98 99 100 108
DOT                  : 1 93
DOWNTO               : 99
ELSE                 : 96
END                  : 4 47 48 77 102
EQ                   : 16 20 131
FILE                 : 50
FOR                  : 98 99
FUNCTION             : 28
GE                   : 136
GOTO                 : 111
GT                   : 135
ID                   : 1 16 20 28 29 42 58 62 66 67 91 92 93 94 95 98 99 120
IF                   : 96 97
IN                   : 137
INTEGER              : 22 23 54 111 112 113
LABEL                : 21
LBRACKET             : 40 44 91 122
LE                   : 134
LPAREN               : 2 28 29 45 65 94 120 121
LT                   : 133
MINUS                : 126
MOD                  : 130
NE                   : 132
NIL                  : 59 117
NOT                  : 123
OF                   : 43 44 49 50 62 102
OR                   : 139
PACKED               : 39
PLUS                 : 125
PROCEDURE            : 29
PROGRAM              : 1
RANGE                : 46 53
RBRACKET             : 40 44 91 122
REAL                 : 55 114
RECORD               : 47 48
REPEAT               : 101
RPAREN               : 2 28 29 45 65 94 120 121
SEMI                 : 1 14 15 18 19 21 27 28 28 29 29 63 64 70 75 103 104
SET                  : 49
STRING               : 57 116
THEN                 : 96 97
TIMES                : 127
TIPO                 : 40 41 62
TO                   : 98
TYPE                 : 17
UNTIL                : 101
VAR                  : 24 73
WHILE                : 100
WITH                 : 108
error                : 

Nonterminals, with rules where they appear

CONST_ITEM           : 14 15
ID_LIST              : 2 27 45 67 72 73 74
array_type           : 33
assignment           : 78
block                : 1 28 29
case_item            : 103 104
case_list            : 102 103
case_statement       : 84
compound             : 88
const_declaration    : 7
const_expr           : 53 53
const_list           : 13 14
constant             : 40 46 46 65 106 107 119
constant_list        : 105 107
declaration          : 5
declarations         : 4 5
empty                : 3 6 69 89
enum_type            : 34
expression           : 16 90 91 96 97 98 98 99 99 100 101 102 121 123 124 124 125 125 126 126 127 127 128 128 129 129 130 130 131 131 132 132 133 133 134 134 135 135 136 136 137 137 138 138 139 139 140 141
expression_list      : 94 120 122 141
field_list           : 47 48 60 65
file_type            : 38
for_statement        : 81
function_declaration : 11
goto_statement       : 86
if_statement         : 80
label_declaration    : 9
label_list           : 21 22
labeled_statement    : 87
packed_type          : 30
param                : 70 71
param_list           : 68 70
params               : 28 29
procedure_call       : 79
procedure_declaration : 12
program              : 0
program_params       : 1
range                : 51 52
range_list           : 44 51
record_type          : 36
repeat_statement     : 83
set_type             : 37
short_string         : 31
simple_type          : 32
statement            : 75 76 96 96 97 98 99 100 108 112
statement_list       : 4 75 77 101 105
subrange_type        : 35
type                 : 20 27 28 39 43 44 49 50 72 73 74
type_declaration     : 8
type_item            : 18 19
type_list            : 17 18
var_declaration      : 10
var_item             : 25 26 60 61
var_list             : 24 25
variable             : 90 93 109 110 118
variable_list        : 108 110
variant_item         : 63 64
variant_list         : 62 63
variant_part         : 47
while_statement      : 82
with_statement       : 85

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID program_params SEMI block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID program_params SEMI block DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . program_params SEMI block DOT
    (2) program_params -> . LPAREN ID_LIST RPAREN
    (3) program_params -> . empty
    (142) empty -> .

    LPAREN          shift and go to state 5
    SEMI            reduce using rule 142 (empty -> .)

    program_params                 shift and go to state 4
    empty                          shift and go to state 6

state 4

    (1) program -> PROGRAM ID program_params . SEMI block DOT

    SEMI            shift and go to state 7


state 5

    (2) program_params -> LPAREN . ID_LIST RPAREN
    (66) ID_LIST -> . ID
    (67) ID_LIST -> . ID_LIST COMMA ID

    ID              shift and go to state 9

    ID_LIST                        shift and go to state 8

state 6

    (3) program_params -> empty .

    SEMI            reduce using rule 3 (program_params -> empty .)


state 7

    (1) program -> PROGRAM ID program_params SEMI . block DOT
    (4) block -> . declarations BEGIN statement_list END
    (5) declarations -> . declarations declaration
    (6) declarations -> . empty
    (142) empty -> .

    BEGIN           reduce using rule 142 (empty -> .)
    CONST           reduce using rule 142 (empty -> .)
    TYPE            reduce using rule 142 (empty -> .)
    LABEL           reduce using rule 142 (empty -> .)
    VAR             reduce using rule 142 (empty -> .)
    FUNCTION        reduce using rule 142 (empty -> .)
    PROCEDURE       reduce using rule 142 (empty -> .)

    block                          shift and go to state 10
    declarations                   shift and go to state 11
    empty                          shift and go to state 12

state 8

    (2) program_params -> LPAREN ID_LIST . RPAREN
    (67) ID_LIST -> ID_LIST . COMMA ID

    RPAREN          shift and go to state 13
    COMMA           shift and go to state 14


state 9

    (66) ID_LIST -> ID .

    RPAREN          reduce using rule 66 (ID_LIST -> ID .)
    COMMA           reduce using rule 66 (ID_LIST -> ID .)
    COLON           reduce using rule 66 (ID_LIST -> ID .)


state 10

    (1) program -> PROGRAM ID program_params SEMI block . DOT

    DOT             shift and go to state 15


state 11

    (4) block -> declarations . BEGIN statement_list END
    (5) declarations -> declarations . declaration
    (7) declaration -> . const_declaration
    (8) declaration -> . type_declaration
    (9) declaration -> . label_declaration
    (10) declaration -> . var_declaration
    (11) declaration -> . function_declaration
    (12) declaration -> . procedure_declaration
    (13) const_declaration -> . CONST const_list
    (17) type_declaration -> . TYPE type_list
    (21) label_declaration -> . LABEL label_list SEMI
    (24) var_declaration -> . VAR var_list
    (28) function_declaration -> . FUNCTION ID LPAREN params RPAREN COLON type SEMI block SEMI
    (29) procedure_declaration -> . PROCEDURE ID LPAREN params RPAREN SEMI block SEMI

    BEGIN           shift and go to state 16
    CONST           shift and go to state 24
    TYPE            shift and go to state 25
    LABEL           shift and go to state 26
    VAR             shift and go to state 27
    FUNCTION        shift and go to state 28
    PROCEDURE       shift and go to state 29

    declaration                    shift and go to state 17
    const_declaration              shift and go to state 18
    type_declaration               shift and go to state 19
    label_declaration              shift and go to state 20
    var_declaration                shift and go to state 21
    function_declaration           shift and go to state 22
    procedure_declaration          shift and go to state 23

state 12

    (6) declarations -> empty .

    BEGIN           reduce using rule 6 (declarations -> empty .)
    CONST           reduce using rule 6 (declarations -> empty .)
    TYPE            reduce using rule 6 (declarations -> empty .)
    LABEL           reduce using rule 6 (declarations -> empty .)
    VAR             reduce using rule 6 (declarations -> empty .)
    FUNCTION        reduce using rule 6 (declarations -> empty .)
    PROCEDURE       reduce using rule 6 (declarations -> empty .)


state 13

    (2) program_params -> LPAREN ID_LIST RPAREN .

    SEMI            reduce using rule 2 (program_params -> LPAREN ID_LIST RPAREN .)


state 14

    (67) ID_LIST -> ID_LIST COMMA . ID

    ID              shift and go to state 30


state 15

    (1) program -> PROGRAM ID program_params SEMI block DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID program_params SEMI block DOT .)


state 16

    (4) block -> declarations BEGIN . statement_list END
    (75) statement_list -> . statement_list SEMI statement
    (76) statement_list -> . statement
    (78) statement -> . assignment
    (79) statement -> . procedure_call
    (80) statement -> . if_statement
    (81) statement -> . for_statement
    (82) statement -> . while_statement
    (83) statement -> . repeat_statement
    (84) statement -> . case_statement
    (85) statement -> . with_statement
    (86) statement -> . goto_statement
    (87) statement -> . labeled_statement
    (88) statement -> . compound
    (89) statement -> . empty
    (90) assignment -> . variable ASSIGN expression
    (94) procedure_call -> . ID LPAREN expression_list RPAREN
    (95) procedure_call -> . ID
    (96) if_statement -> . IF expression THEN statement ELSE statement
    (97) if_statement -> . IF expression THEN statement
    (98) for_statement -> . FOR ID ASSIGN expression TO expression DO statement
    (99) for_statement -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (100) while_statement -> . WHILE expression DO statement
    (101) repeat_statement -> . REPEAT statement_list UNTIL expression
    (102) case_statement -> . CASE expression OF case_list END
    (108) with_statement -> . WITH variable_list DO statement
    (111) goto_statement -> . GOTO INTEGER
    (112) labeled_statement -> . INTEGER COLON statement
    (77) compound -> . BEGIN statement_list END
    (142) empty -> .
    (91) variable -> . ID LBRACKET expression RBRACKET
    (92) variable -> . ID
    (93) variable -> . variable DOT ID

    ID              shift and go to state 47
    IF              shift and go to state 48
    FOR             shift and go to state 49
    WHILE           shift and go to state 50
    REPEAT          shift and go to state 51
    CASE            shift and go to state 52
    WITH            shift and go to state 53
    GOTO            shift and go to state 54
    INTEGER         shift and go to state 55
    BEGIN           shift and go to state 31
    END             reduce using rule 142 (empty -> .)
    SEMI            reduce using rule 142 (empty -> .)

    statement_list                 shift and go to state 32
    statement                      shift and go to state 33
    assignment                     shift and go to state 34
    procedure_call                 shift and go to state 35
    if_statement                   shift and go to state 36
    for_statement                  shift and go to state 37
    while_statement                shift and go to state 38
    repeat_statement               shift and go to state 39
    case_statement                 shift and go to state 40
    with_statement                 shift and go to state 41
    goto_statement                 shift and go to state 42
    labeled_statement              shift and go to state 43
    compound                       shift and go to state 44
    empty                          shift and go to state 45
    variable                       shift and go to state 46

state 17

    (5) declarations -> declarations declaration .

    BEGIN           reduce using rule 5 (declarations -> declarations declaration .)
    CONST           reduce using rule 5 (declarations -> declarations declaration .)
    TYPE            reduce using rule 5 (declarations -> declarations declaration .)
    LABEL           reduce using rule 5 (declarations -> declarations declaration .)
    VAR             reduce using rule 5 (declarations -> declarations declaration .)
    FUNCTION        reduce using rule 5 (declarations -> declarations declaration .)
    PROCEDURE       reduce using rule 5 (declarations -> declarations declaration .)


state 18

    (7) declaration -> const_declaration .

    BEGIN           reduce using rule 7 (declaration -> const_declaration .)
    CONST           reduce using rule 7 (declaration -> const_declaration .)
    TYPE            reduce using rule 7 (declaration -> const_declaration .)
    LABEL           reduce using rule 7 (declaration -> const_declaration .)
    VAR             reduce using rule 7 (declaration -> const_declaration .)
    FUNCTION        reduce using rule 7 (declaration -> const_declaration .)
    PROCEDURE       reduce using rule 7 (declaration -> const_declaration .)


state 19

    (8) declaration -> type_declaration .

    BEGIN           reduce using rule 8 (declaration -> type_declaration .)
    CONST           reduce using rule 8 (declaration -> type_declaration .)
    TYPE            reduce using rule 8 (declaration -> type_declaration .)
    LABEL           reduce using rule 8 (declaration -> type_declaration .)
    VAR             reduce using rule 8 (declaration -> type_declaration .)
    FUNCTION        reduce using rule 8 (declaration -> type_declaration .)
    PROCEDURE       reduce using rule 8 (declaration -> type_declaration .)


state 20

    (9) declaration -> label_declaration .

    BEGIN           reduce using rule 9 (declaration -> label_declaration .)
    CONST           reduce using rule 9 (declaration -> label_declaration .)
    TYPE            reduce using rule 9 (declaration -> label_declaration .)
    LABEL           reduce using rule 9 (declaration -> label_declaration .)
    VAR             reduce using rule 9 (declaration -> label_declaration .)
    FUNCTION        reduce using rule 9 (declaration -> label_declaration .)
    PROCEDURE       reduce using rule 9 (declaration -> label_declaration .)


state 21

    (10) declaration -> var_declaration .

    BEGIN           reduce using rule 10 (declaration -> var_declaration .)
    CONST           reduce using rule 10 (declaration -> var_declaration .)
    TYPE            reduce using rule 10 (declaration -> var_declaration .)
    LABEL           reduce using rule 10 (declaration -> var_declaration .)
    VAR             reduce using rule 10 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 10 (declaration -> var_declaration .)
    PROCEDURE       reduce using rule 10 (declaration -> var_declaration .)


state 22

    (11) declaration -> function_declaration .

    BEGIN           reduce using rule 11 (declaration -> function_declaration .)
    CONST           reduce using rule 11 (declaration -> function_declaration .)
    TYPE            reduce using rule 11 (declaration -> function_declaration .)
    LABEL           reduce using rule 11 (declaration -> function_declaration .)
    VAR             reduce using rule 11 (declaration -> function_declaration .)
    FUNCTION        reduce using rule 11 (declaration -> function_declaration .)
    PROCEDURE       reduce using rule 11 (declaration -> function_declaration .)


state 23

    (12) declaration -> procedure_declaration .

    BEGIN           reduce using rule 12 (declaration -> procedure_declaration .)
    CONST           reduce using rule 12 (declaration -> procedure_declaration .)
    TYPE            reduce using rule 12 (declaration -> procedure_declaration .)
    LABEL           reduce using rule 12 (declaration -> procedure_declaration .)
    VAR             reduce using rule 12 (declaration -> procedure_declaration .)
    FUNCTION        reduce using rule 12 (declaration -> procedure_declaration .)
    PROCEDURE       reduce using rule 12 (declaration -> procedure_declaration .)


state 24

    (13) const_declaration -> CONST . const_list
    (14) const_list -> . const_list CONST_ITEM SEMI
    (15) const_list -> . CONST_ITEM SEMI
    (16) CONST_ITEM -> . ID EQ expression

    ID              shift and go to state 58

    const_list                     shift and go to state 56
    CONST_ITEM                     shift and go to state 57

state 25

    (17) type_declaration -> TYPE . type_list
    (18) type_list -> . type_list type_item SEMI
    (19) type_list -> . type_item SEMI
    (20) type_item -> . ID EQ type

    ID              shift and go to state 61

    type_list                      shift and go to state 59
    type_item                      shift and go to state 60

state 26
